@@ -1,0 +1,40 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>Save state dialog</title>
+  </head>
+
+  <body>
+    <h1>The save state dialog</h1>
+
+    <p>
+      This dialog allows you to save the state of the program.
+      In the top part of the dialog, select the elements of the state
+      you want save.
+      In the middle part of the dialog either select a file to overwrite
+      or navigate to a directory and type in the name of the saved file.
+      Finally in the bottom part click one of:
+      <ul>
+        <li>Ok - to create the save file</li>
+        <li>Cancel - To dismiss the dialog and do nothing</li>
+        <li>Help   - To display this help text</li>
+    </ul>
+    </p>
+
+    <p>Related material<br />
+      <a href="Intro.html">Introduction</a>
+      <a href="Concepts.html">GUI concepts</a>
+      <a href="Objects.html">Objects the GUI manipulates</a>
+      <a href="Parameters.html">Parameters</a>
+      <a href="Spectra.html">Spectra</a>
+      <a href="Gates.html">Gates</a>
+      <a href="Variable.html">Variables</a>
+    </p>
+
+    <hr>
+<!-- Created: Tue Oct 10 08:24:06 EDT 2006 -->
+<!-- hhmts start -->
+Last modified: Tue Oct 10 08:47:33 EDT 2006
+<!-- hhmts end -->
+  </body>
+</html>
